--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ts-rollup-starter",
+  "name": "your-lib-name",
   "version": "0.0.0",
   "description": "",
   "keywords": [],
-  "main": "dist/ts-rollup-starter.umd.js",
-  "module": "dist/ts-rollup-starter.es5.js",
-  "typings": "dist/types/ts-rollup-starter.d.ts",
+  "main": "dist/your-lib-name.umd.js",
+  "module": "dist/your-lib-name.es5.js",
+  "typings": "dist/types/your-lib-name.d.ts",
   "files": [
     "dist"
   ],
